<resources>
    <string name="title">NAVISMART</string>
    <string name="app_name">Navismart</string>
    <string name="lets_get_started">Let\'s Get Started</string>
    <string name="sign_in_with_email">LOGIN</string>
    <string name="create_acct">CREATE NEW ACCOUNT</string>
    <string name="or">OR</string>
    <string name="agreeing_with">By creating or logging into an account you are agreeing with our</string>
    <string name="TnC"><u>Terms and Conditions</u></string>
    <string name="terms_conditions">Terms and Conditions</string>
    <string name="and">and</string>
    <string name="PrivacyStatement"><u>Privacy Statement</u></string>
    <string name="marina_manager">Marina Manager</string>
    <string name="boater">Boater</string>
    <string name="third_party_service_providers">Third Party Service Providers</string>
    <string name="next">Next</string>
    <string name="sign_in">Sign In</string>
    <string name="to">to</string>
    <string name="email_id">Email</string>
    <string name="password">Password (min 6 characters)</string>
    <string name="show_password">Show Password</string>
    <string name="register">Register</string>
    <string name="upload">Upload</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="reception_capacity">Reception\nCapacity</string>
    <string name="docks_available">Docks Available: </string>
    <string name="you">You</string>
    <string name="your_boat">Your Boat</string>
    <string name="marina_description">Marina Description</string>
    <string name="your_boats">Your Boats</string>
    <string name="id">ID</string>
    <string name="length">Length(m)</string>
    <string name="beam">Beam(m)</string>
    <string name="type">Type</string>
    <string name="upload_registration">Upload Registration</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">SEARCH</string>
    <string name="from">From</string>
    <string name="To">To</string>
    <string name="special_needs">Special Needs</string>
    <string name="until_tomorrow">Until Tomorrow</string>
    <string name="order_by">ORDER BY:</string>
    <string name="closest">Closest</string>
    <string name="cheapest">Cheapest</string>
    <string name="dist_search">Distance from search</string>
    <string name="see_details">See Details</string>
    <string name="price">Price</string>
    <string name="show_result">Show Results</string>
    <string name="free_cancellation">Free Cancellation</string>
    <string name="price_range">Price Range</string>
    <string name="set_date">Set Date</string>
    <string name="check_in_date">Check-in date</string>
    <string name="check_out_date">Check-out date</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer consequat, mi a blandit auctor, massa dui sollicitudin lectus, id vestibulum sapien nisl at mi. Pellentesque laoreet dapibus ipsum vel fermentum. </string>
    <string name="book">Book</string>
    <string name="facilities">Facilities</string>
    <string name="reviews">Reviews</string>
    <string name="checkout">Checkout</string>
    <string name="past_bookings">Past Bookings</string>
    <string name="current_bookings">Current Bookings</string>
    <string name="upcoming_bookings">Upcoming Bookings</string>
    <string name="date">Date</string>
    <string name="no_upcoming_booking">No upcoming bookings</string>
    <string name="no_current_booking">No current bookings</string>
    <string name="no_past_booking">No past bookings</string>
    <string name="booking_date">Booking Date : </string>
    <string name="boater_colon">Boater : </string>
    <string name="your_boat_colon">Your Boat : </string>
    <string name="boat_id">Boat ID : </string>
    <string name="review">Review</string>
    <string name="review_marina">Review Marina</string>
    <string name="rating">Rating</string>
    <string name="submit_review">Submit Review</string>
    <string name="add_boat">Add Boat</string>
    <string name="arrival">Arrival</string>
    <string name="arriving">Arrival:</string>
    <string name="departure">Departure</string>
    <string name="departing">Departure:</string>
    <string name="stayover">Stay-overs</string>
    <string name="booked">Booked</string>
    <string name="available">Available</string>
    <string name="new_booking">New bookings</string>
    <string name="new_reviews">New reviews</string>
    <string name="boat_name">Boat Name</string>
    <string name="boat_ID">Boat ID</string>
    <string name="booking_number">Booking ID</string>
    <string name="profile">Profile</string>
    <string name="no_results_found">No Results Found</string>
    <string name="upload_marina_images_long_press_on_image_to_delete">Upload marina images (Long press to delete)</string>
    <string name="drinking_water">Drinking Water</string>
    <string name="electricity">Electricity</string>
    <string name="fuel_station">Fuel Station</string>
    <string name="_24_7_access">24/7 Access</string>
    <string name="travel_lift">Travel Lift</string>
    <string name="security">Security</string>
    <string name="residual_water_collection">Residual Water Collection</string>
    <string name="restaurant">Restaurant</string>
    <string name="dry_port">Dry Port</string>
    <string name="maintenance">Maintenance</string>
    <string name="see_more_reviews"><u>See more reviews</u></string>
    <string name="send_a_message">Send a message</string>
    <string name="type_a_message">Type a message</string>
    <string name="verify_creds">"Verify your EmailID and password"</string>
    <string name="verify">Verify</string>
    <string name="enter_new_email_and_password">Enter new Email and Password</string>
    <string name="change">Change</string>
    <string name="no_of_docks">Number of docks needed</string>
    <string name="edit">Edit</string>
    <string name="delete_boat">Do you really want to delete this boat?</string>
    <string name="cannot_undo">This cannot be undone!</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="boat_name_details">Boat Name:</string>
    <string name="boat_id_details">Boat ID:</string>
    <string name="default_string">default</string>
    <string name="marina_name_details">Marina Name:</string>
    <string name="number_of_docks_details">Number of docks:</string>
    <string name="arrival_date_details">Arrival date:</string>
    <string name="departure_date_details">Departure date:</string>
    <string name="price_details">Price:</string>
    <string name="booking_id_details">Booking ID:</string>
    <string name="booking_date_details">Booking date:</string>
    <string name="no_msg">No messages yet</string>
    <string name="no_review">No reviews yet</string>
    <string name="change_email_or_password">Change Email or Password</string>
    <string name="registered_email">Registered Email:</string>
    <string name="delete_all_chats">Delete all chats</string>
    <string name="delete_chat_msg">Do you really want to delete all chats?</string>
    <string name="logout">logout</string>
    <string name="boat_type">Boat Type</string>
    <string name="no_activity_yet">No activity yet</string>
    <string name="no_of_docks_booked">No. of docks</string>
    <string name="sufficient_docks_unavailable">Sufficient docks unavaialable!</string>
    <string name="enter_card_details">Enter your card details below</string>
    <string name="confirm_payment">Confirm Payment</string>
    <string name="submit">Submit</string>
    <string name="address">Address</string>
    <string name="reject">Reject</string>
    <string name="approve">Approve</string>
    <string name="contact_us">Contact Us</string>
    <string name="reply">Reply</string>
    <string name="write_reply">Write Reply</string>
    <string name="edit_details">Edit Details</string>
    <string name="cancel_booking">Cancel Booking</string>
    <string name="booking_cancelled">This booking has been cancelled</string>
    <string name="cancelled">Cancelled</string>
</resources>
