<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".view.StartFragment">

    <ImageView
        android:id="@+id/start_cross"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_close_white_24dp"
        android:layout_margin="16dp"
        />

    <TextView
        android:id="@+id/lets_get_started_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lets_get_started"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/colorAccent"
        android:layout_below="@+id/start_cross"
        android:layout_centerHorizontal="true"
        />

    <Button
        android:id="@+id/sign_in_email_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_with_email"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/colorAccent"
        android:backgroundTint="@color/colorPrimary"
        android:layout_below="@+id/lets_get_started_text_view"
        android:layout_marginTop="144dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_centerHorizontal="true"
        />

    <RelativeLayout
        android:id="@+id/or_break_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sign_in_email_button"
        android:layout_marginTop="8dp"
        android:layout_centerHorizontal="true"
        >
        <View
            android:id="@+id/v1"
            android:layout_alignParentStart="true"
            android:layout_width="30dp"
            android:layout_height="2dp"
            android:background="@color/colorAccent"
            android:layout_margin="3dp"
            android:layout_centerVertical="true"/>
        <TextView
            android:id="@+id/v2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/v1"
            android:text="@string/or"
            android:textColor="@color/colorAccent"
            android:textSize="15sp"
            android:layout_centerVertical="true"/>
        <View
            android:id="@+id/v3"
            android:layout_toEndOf="@+id/v2"
            android:layout_width="30dp"
            android:layout_height="2dp"
            android:background="@color/colorAccent"
            android:layout_margin="3dp"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

    <Button
        android:id="@+id/create_acct_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_acct"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/colorAccent"
        android:backgroundTint="@color/colorPrimary"
        android:layout_below="@+id/or_break_line"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_centerHorizontal="true"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp">
        <TextView
            android:id="@+id/terms_cond"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agreeing_with"
            android:textSize="12sp"
            android:textColor="@color/colorAccent"
            android:textAlignment="center"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/terms_cond_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TnC"
                android:textSize="12sp"
                android:textColor="@color/colorAccent"
                android:textAlignment="center"
                />
            <TextView
                android:id="@+id/and_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/and"
                android:textSize="12sp"
                android:textColor="@color/colorAccent"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:textAlignment="center"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                />
            <TextView
                android:id="@+id/privacy_statement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/PrivacyStatement"
                android:textSize="12sp"
                android:textColor="@color/colorAccent"
                android:textAlignment="center"
                />

        </LinearLayout>
    </LinearLayout>


</RelativeLayout>